PROJECT("HelloWorld")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(/usr/local/include/bullet/)

LINK_LIBRARIES(BulletDynamics BulletCollision LinearMath)

ADD_EXECUTABLE(main src/main.cpp )

IF (INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
  SET_TARGET_PROPERTIES(main PROPERTIES  DEBUG_POSTFIX "_Debug")
  SET_TARGET_PROPERTIES(main PROPERTIES  MINSIZEREL_POSTFIX "_MinsizeRel")
  SET_TARGET_PROPERTIES(main PROPERTIES  RELWITHDEBINFO_POSTFIX "_RelWithDebugInfo")
ENDIF(INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
