PROJECT("Scene")

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(/usr/local/include/bullet/)

ADD_LIBRARY(vector3 SHARED src/vector3.cpp)
ADD_LIBRARY(camera SHARED src/camera.cpp)
ADD_LIBRARY(physics_manager SHARED src/physics_manager.cpp)
ADD_LIBRARY(timer SHARED src/timer.cpp)
ADD_LIBRARY(sphere SHARED src/sphere.cpp)
ADD_LIBRARY(box SHARED src/box.cpp)

ADD_EXECUTABLE(main src/main.cpp )

TARGET_LINK_LIBRARIES(main camera)
TARGET_LINK_LIBRARIES(main vector3)
TARGET_LINK_LIBRARIES(main physics_manager)
TARGET_LINK_LIBRARIES(main BulletDynamics)
TARGET_LINK_LIBRARIES(main BulletCollision)
TARGET_LINK_LIBRARIES(main LinearMath)
TARGET_LINK_LIBRARIES(main glut)
TARGET_LINK_LIBRARIES(main GLU)
TARGET_LINK_LIBRARIES(main timer)
TARGET_LINK_LIBRARIES(main sphere)
TARGET_LINK_LIBRARIES(main box)

IF (INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
  SET_TARGET_PROPERTIES(main PROPERTIES  DEBUG_POSTFIX "_Debug")
  SET_TARGET_PROPERTIES(main PROPERTIES  MINSIZEREL_POSTFIX "_MinsizeRel")
  SET_TARGET_PROPERTIES(main PROPERTIES  RELWITHDEBINFO_POSTFIX "_RelWithDebugInfo")
ENDIF(INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
